--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -108,6 +108,15 @@
         </a>
       </div>
 
+      <!-- ✅ NEW: تكليفات اللجان (admin-only) -->
+      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
+        <a href="/committees-assignments.html" class="card-link p-4 bg-white d-block h-100">
+          <div class="icon text-primary"><i class="bi bi-kanban"></i></div>
+          <h5 class="mt-3">تكليفات اللجان</h5>
+          <p class="mb-0 text-muted">إنشاء وتوزيع ومتابعة التكليفات</p>
+        </a>
+      </div>
+
       <!-- عرض التقييمات (عام) -->
       <div class="col-12 col-sm-6 col-lg-4">
         <a href="/evaluations_dashboard.html" class="card-link p-4 bg-white d-block h-100" target="_blank">
