--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -126,6 +126,15 @@
         </a>
       </div>
 
+      <!-- ✅ NEW: النسخ الاحنياطية (admin-only) -->
+      <div class="col-12 col-sm-6 col-lg-4 admin-only" data-admin="true">
+        <a href="/cbackups.html" class="card-link p-4 bg-white d-block h-100">
+          <div class="icon text-secondary"><i class="bi bi-cloud-arrow-down"></i></div>
+          <h5 class="mt-3">النسخ الاحنياطية</h5>
+          <p class="mb-0 text-muted">إنشاء واسترجاع نسخ النظام</p>
+        </a>
+      </div>
+
       <!-- عرض التقييمات (عام) -->
       <div class="col-12 col-sm-6 col-lg-4">
         <a href="/evaluations_dashboard.html" class="card-link p-4 bg-white d-block h-100" target="_blank">
@@ -135,7 +144,7 @@
         </a>
       </div>
 
-      <!-- ✅ NEW: إضافة روابط ملفات اللجان (يظهر للجميع) -->
+      <!-- ✅ NEW: إضافة ملفات اللجان (يظهر للجميع) -->
       <div class="col-12 col-sm-6 col-lg-4">
         <a href="/committees-files-add.html" class="card-link p-4 bg-white d-block h-100">
           <div class="icon text-primary"><i class="bi bi-link-45deg"></i></div>
